--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	   <p>
       Cool Math G8MES
     </p>
-<a href="example/batman.html">Moto X3M</a>
+<a href="motoX3M.html">Moto X3M</a>
 
 
     <p>
