--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
 	 ----------------------------------------------------------------
     </p>
 	   <p>
-      Cool Math G8MES
+    <!  Cool Math G8MES -->
     </p>
-<a href="motoX3M1.html">Moto X3M 1</a>
+
 
 
     <p>
