--- a/index.html
+++ b/index.html
@@ -272,9 +272,10 @@
 	 ----------------------------------------------------------------
     </p>
 	   <p>
-    <!  Cool Math G8MES -->
+    Cool Math G8MES
     </p>
-
+	
+<a href="https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20">CoolMathGames.com</a>
 
 
     <p>
