--- a/index.html
+++ b/index.html
@@ -268,15 +268,13 @@
 <a href="emu/mariokartds.html">Mario Kart (DS)</a>
 -
 <a href="emu/wwf.html">WWF No Mercy (N64)</a>
-	
-	 ----------------------------------------------------------------
+ ----------------------------------------------------------------------
     </p>
-	   <p>
-    Cool Math G8MES
+
+    <p>
+      Flash G8MES ( if you care ) 
     </p>
-<a href="https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20">CoolMathGames.com</a>
-
-
+<a href="<a href="waflash/pancake.html">Papa's Pancakeria</a>">Alien Hominid</a>
     <p>
       ----------------------------------------------------------------
     </p>
