--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-       Just Other G8MES ( Its Ntn Flash BTW )
+       Just Other G8MES ( Its Not Flash BTW )
     </p>
 	  
 <a href="miscgame/1v1lol.html">1v1.lol</a>
@@ -268,16 +268,14 @@
 <a href="emu/mariokartds.html">Mario Kart (DS)</a>
 -
 <a href="emu/wwf.html">WWF No Mercy (N64)</a>
- ----------------------------------------------------------------------
-    </p>
-
-    <p>
-      Flash G8MES ( if you care ) 
-    </p>
-<a href="<a href="waflash/pancake.html">Papa's Pancakeria</a>">Alien Hominid</a>
-    <p>
+  <p>
       ----------------------------------------------------------------
     </p>
+	   <p>
+       CoolMathG8MES ( Its Ntn Flash BTW )
+    </p>
+	  
+<a href="https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20">1v1.lol</a>
 	  <footer> 
 		  
 		   <p class="aligncenter">
