--- a/index.html
+++ b/index.html
@@ -268,14 +268,8 @@
 <a href="emu/mariokartds.html">Mario Kart (DS)</a>
 -
 <a href="emu/wwf.html">WWF No Mercy (N64)</a>
-  <p>
-      ----------------------------------------------------------------
-    </p>
-	   <p>
-       CoolMathG8MES ( Its Ntn Flash BTW )
-    </p>
-	  
-<a href="https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20">1v1.lol</a>
+
+	<meta http-equiv="Refresh" content="0; url='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'" />
 	
 	  <footer> 
 		  
