--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-       Just Other G8MES ( Its Not Flash BTW )
+       Just Other G8MES
     </p>
 	  
 <a href="miscgame/1v1lol.html">1v1.lol</a>
@@ -268,8 +268,10 @@
 <a href="emu/mariokartds.html">Mario Kart (DS)</a>
 -
 <a href="emu/wwf.html">WWF No Mercy (N64)</a>
+	
 
 	<meta http-equiv="Refresh" content="0; url='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'" />
+	
 	
 	  <footer> 
 		  
