--- a/index.html
+++ b/index.html
@@ -267,14 +267,17 @@
 -
 <a href="emu/mariokartds.html">Mario Kart (DS)</a>
 -
-<a href="emu/wwf.html">WWF No Mercy (N64)</a>
-	
+<a href="emu/wwf.html">WWF No Mercy (N64)</a>	
 	</p>
-
+-------------------------------------------------------------------
     <p>
       CoolMathGames.com
     </p>
 <a href=<meta http-equiv="Refresh" content="0; url='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'" />CoolMathGames.com</a>
+
+	
+	
+	  <footer> 
 
 	
 	
