--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	 <title>
-   NW G8MES
+   Chili Bowl G@mes Secret Ruffle Stash 
   </title>
 	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4146748834676749"
@@ -16,8 +16,8 @@
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
 	
-    <p>Hello Just Play Some Free G8MES!</p>
-    <p>Everything <i>should</i> work. If something goes wrong please report an error at the <a href="https://github.com/NWG8MES/weruhgfderfg">Github.</a> Enjoy!!</p>
+    <p>Welcome to Chili Bowl G@mes! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g@mes. Along with providing new website makers embedable g@mes!</p>
+    <p>Everything <i>should</i> work. If something goes wrong please report an error at the <a href="https://github.com/CBGamesdev/chiliblox">Github.</a> Thanks and Enjoy!!</p>
 	
 	<!-- Div align in the middle -->
       <div style="margin-left:auto;margin-right:auto;text-align:center">
@@ -33,7 +33,7 @@
     </p>
 
     <p>
-      Flash G8MES ( if you care ) 
+      Flash G@mes 
     </p>
 <a href="alien.html">Alien Hominid</a>
  -
@@ -168,7 +168,7 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-       Just Other G8MES ( Its Not Flash BTW )
+       Other G@mes (Non Flash)
     </p>
 	  
 <a href="miscgame/1v1lol.html">1v1.lol</a>
@@ -225,7 +225,7 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-      EMUL8TED
+      Emul@ted
     </p>
 <a href="example/batman.html">Batman (NES)</a>
 -
@@ -267,21 +267,19 @@
 -
 <a href="emu/mariokartds.html">Mario Kart (DS)</a>
 -
-<a href="emu/wwf.html">WWF No Mercy (N64)</a>	
- <p>
+<a href="emu/wwf.html">WWF No Mercy (N64)</a>
+	    <p>
       ----------------------------------------------------------------
     </p>
 	   <p>
-      EMUL8TED
+      CoolMathGames
     </p>
 <meta http-equiv="Refresh" content="0; url='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'" />
 
-	
-	
-	  <footer> 
 
-	
-	
+    <p>
+      ----------------------------------------------------------------
+    </p>
 	  <footer> 
 		  
 		   <p class="aligncenter">
