--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	   <p>
       CoolMathGames
     </p>
-<meta http-equiv="Refresh" content="0; url='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'" />
+<meta http-equiv="" content="0; url='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'" />
 
 
     <p>
