--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
 	   <p>
       CoolMathGames
     </p>
-<meta http-equiv="" content="0; url='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'" />
+<td><a href="https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20">&nbsp;</a></td>
+
 
 
     <p>
