--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	 <title>
-   Chili Bowl G@mes Secret Ruffle Stash 
+   NWG8MES
   </title>
 	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4146748834676749"
@@ -268,11 +268,13 @@
 <a href="emu/mariokartds.html">Mario Kart (DS)</a>
 -
 <a href="emu/wwf.html">WWF No Mercy (N64)</a>
-	    <p>
+			    
+	 
+    <p>
       ----------------------------------------------------------------
     </p>
 	   <p>
-      CoolMathGames
+       Other G@mes (Non Flash)
     </p>
 <td><a href="https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20">&nbsp;</a></td>
 
