--- a/index.html
+++ b/index.html
@@ -274,9 +274,10 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-       Other G@mes (Non Flash)
+       CoolMathGames
     </p>
-<td><a href="https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20">&nbsp;</a></td>
+<td onclick="window.location='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'"></td>
+
 
 
 
