--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 	   <p>
        CoolMathGames
     </p>
-onclick="window.open('https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20')";
+ <a href="CoolMathGames.com">CoolMathGames.com</a>
 
 
 
