--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
 	   <p>
        CoolMathGames
     </p>
-<a"https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20"</a>
+<td onclick="window.location='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'"></td>
+
 
 
 
