--- a/index.html
+++ b/index.html
@@ -276,7 +276,21 @@
 	   <p>
        CoolMathGames
     </p>
-<td onclick="window.location='https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20'"></td>
+
+
+Bind a Javascript method to the onclick event on the TD, if you are using jQuery you can do this:
+
+$(document).ready(function(){
+
+$("td").click(function(){
+
+    // Perform your action on click here, like redirecting to a new url
+    window.location='http://google.com';
+});
+
+});
+
+
 
 
 
