--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </p>
 
 
-<button onclick="location.href = 'https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >Home</button>
+<button onclick="location.href = 'https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
 
 
