--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </p>
 
 
-<button onclick="location.href = 'https://azureserv.com/__cpi.php?s=aXZqM0xLVXZpY3FBbHNKN0VOMy9vTkx4TTZhVzI3a0xtYWIyK215aExFckhYWURGMUhsTFZIdlVoSFpaaHFjbExJSGd6QXdGUEl1VWdMU21EODhxQnE3U2RmOGdFT09WVXRqV0JkR1hzTXRkM0lVengzcC84cXBYQjFRZGxWdkc5L3FVSmZSd3kxUzB6ZEIzY0hxcmt3PT0%3D&r=aHR0cHM6Ly9henVyZXNlcnYuY29tLz9fX2Nwbz1hSFIwY0hNNkx5OTNkM2N1WTI5dmJHMWhkR2huWVcxbGN5NWpiMjA%3D&__cpo=1';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://104.149.186.10/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
 
 
