--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 
 <!DOCTYPE html>
 
+<html>
+	<style>
+      body {
+        animation: rainbow 10s ease infinite;
+      }
+
+      @keyframes rainbow {
+        0% { background-color: hsl(0, 97%, 49%); } /* red */
+        10% { background-color: #e80000; } /* orange */
+        20% { background-color: #c50000; } /* yellow */
+        30% { background-color: #a90000; } /* green */
+        40% { background-color: #930000; } /* blue-green */
+        50% { background-color: #6d0000; } /* blue */
+        60% { background-color: #4a0000; } /* indigo */
+        70% { background-color: #2b0000; } /* violet */
+        80% { background-color: #1c0000; } /* white */
+        90% { background-color: #140000; } /* gray */
+        100% { background-color: #000000; } /* black */
+      }
+    </style>
+	<html>
 
 <head>
 	 <title>
