--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         80% { background-color: #1c0000; } /* white */
         90% { background-color: #140000; } /* gray */
         100% { background-color: #000000; } /* black */
+        90% { background-color: #140000; } /* gray */
+        80% { background-color: #1c0000; } /* white */
+        70% { background-color: #2b0000; } /* violet */
+        60% { background-color: #4a0000; } /* indigo */
+        50% { background-color: #6d0000; } /* blue */
+        40% { background-color: #930000; } /* blue-green */
+        30% { background-color: #a90000; } /* green */
+        20% { background-color: #c50000; } /* yellow */
+        10% { background-color: #e80000; } /* orange */
+        0% { background-color: hsl(0, 97%, 49%); } /* red */
       }
     </style>
 	<html>
@@ -299,7 +309,7 @@
     </p>
 
 
-<button onclick="location.href = 'https://104.149.186.10/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://ny.4everproxy.com/process/ZW5jb2RlUGFnZT0wJnN0cmlwVGl0bGU9MCZzdHJpcEpTPTAmYWxsb3dDb29raWVzPTEmYXV0b1Blcm1hbGluaz0wJnN1YmRvbWFpbj1ueSZ1cmw9Y29vbG1hdGhnYW1lcy5jb20=';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
 
 
