--- a/index.html
+++ b/index.html
@@ -8,27 +8,17 @@
       }
 
       @keyframes rainbow {
-        0% { background-color: hsl(0, 97%, 49%); } /* red */
-        10% { background-color: #e80000; } /* orange */
-        20% { background-color: #c50000; } /* yellow */
-        30% { background-color: #a90000; } /* green */
-        40% { background-color: #930000; } /* blue-green */
-        50% { background-color: #6d0000; } /* blue */
-        60% { background-color: #4a0000; } /* indigo */
-        70% { background-color: #2b0000; } /* violet */
-        80% { background-color: #1c0000; } /* white */
-        90% { background-color: #140000; } /* gray */
+        0% { background-color: hsla(0, 100%, 50%, 0.362); } /* red */
+        10% { background-color: #e87800; } /* orange */
+        20% { background-color: #c5b100; } /* yellow */
+        30% { background-color: #17a900; } /* green */
+        40% { background-color: #008793; } /* blue-green */
+        50% { background-color: #14006d; } /* blue */
+        60% { background-color: #29004a; } /* indigo */
+        70% { background-color: #23002b; } /* violet */
+        80% { background-color: #1c000a; } /* white */
+        90% { background-color: #140003; } /* gray */
         100% { background-color: #000000; } /* black */
-        90% { background-color: #140000; } /* gray */
-        80% { background-color: #1c0000; } /* white */
-        70% { background-color: #2b0000; } /* violet */
-        60% { background-color: #4a0000; } /* indigo */
-        50% { background-color: #6d0000; } /* blue */
-        40% { background-color: #930000; } /* blue-green */
-        30% { background-color: #a90000; } /* green */
-        20% { background-color: #c50000; } /* yellow */
-        10% { background-color: #e80000; } /* orange */
-        0% { background-color: hsl(0, 97%, 49%); } /* red */
       }
     </style>
 	<html>
@@ -309,7 +299,7 @@
     </p>
 
 
-<button onclick="location.href = 'https://ny.4everproxy.com/process/ZW5jb2RlUGFnZT0wJnN0cmlwVGl0bGU9MCZzdHJpcEpTPTAmYWxsb3dDb29raWVzPTEmYXV0b1Blcm1hbGluaz0wJnN1YmRvbWFpbj1ueSZ1cmw9Y29vbG1hdGhnYW1lcy5jb20=';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://us.hidester.com/proxy.php?u=eJwBIgDd%2F3M6MjY6IgzxXkqh5c91uPCmlZnP7rRhSrsmjGzL7oP1IjshDhHg&b=7=';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
 
 
