--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 
 <!DOCTYPE html>
 
+function is_user_banned($mcani06@gmail.com){
+  return mysql_result(
+      mysql_query(
+        "SELECT COUNT ('user_id') FROM 'users' where 'email_address = $mcani06@gmail.com and is_banned = 1"
+      )
+  )
+}
+
+function login($username, $email_address, $password){
+  if (is_user_banned(email_address) == true){
+      //show error message and deny access
+  }
+}
+
 <html>
 	<style>
       body {
