--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     </p>
 
 
-<button onclick="location.href = 'https://au.4everproxy.com/process/ZW5jb2RlUGFnZT0wJnN0cmlwVGl0bGU9MCZzdHJpcEpTPTAmYWxsb3dDb29raWVzPTEmYXV0b1Blcm1hbGluaz0xJnN1YmRvbWFpbj1hdSZ1cmw9aHR0cHMlMjUzQSUyNTJGJTI1MkZ3d3cuZ29vZ2xlLmNvbSUyNTJG';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://rb.gy/9a9o8';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
 
 
