--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     </p>
 
 
-<button onclick="location.href = 'https://lux.4everproxy.com/direct/aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20v';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https-azureserv-com-__cpo-ahr0chm6ly93d3cuy29vbg1hdghnyw1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
 
 
