--- a/index.html
+++ b/index.html
@@ -9,16 +9,26 @@
 
       @keyframes rainbow {
         0% { background-color: hsla(0, 100%, 50%, 0.362); } /* red */
-        10% { background-color: #e87800; } /* orange */
-        20% { background-color: #c5b100; } /* yellow */
-        30% { background-color: #17a900; } /* green */
-        40% { background-color: #008793; } /* blue-green */
-        50% { background-color: #14006d; } /* blue */
-        60% { background-color: #29004a; } /* indigo */
-        70% { background-color: #23002b; } /* violet */
-        80% { background-color: #1c000a; } /* white */
-        90% { background-color: #140003; } /* gray */
-        100% { background-color: #000000; } /* black */
+        5% { background-color: #e87800; } /* orange */
+        10% { background-color: #c5b100; } /* yellow */
+        15% { background-color: #17a900; } /* green */
+        20% { background-color: #008793; } /* blue-green */
+        25% { background-color: #14006d; } /* blue */
+        30% { background-color: #29004a; } /* indigo */
+        35% { background-color: #23002b; } /* violet */
+        40% { background-color: #1c000a; } /* white */
+        45% { background-color: #140003; } /* gray */
+        50% { background-color: #000000; } /* black */
+        55% { background-color: #140000; } /* gray */
+        60% { background-color: #1c0000; } /* white */
+        65% { background-color: #2b0000; } /* violet */
+        70% { background-color: #4a0000; } /* indigo */
+        75% { background-color: #6d0000; } /* blue */
+        80% { background-color: #930000; } /* blue-green */
+        85% { background-color: #a90000; } /* green */
+        90% { background-color: #c50000; } /* yellow */
+        95% { background-color: #e80000; } /* orange */
+        100% { background-color: hsl(0, 97%, 49%); } /* red */
       }
     </style>
 	<html>
