--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
 <button onclick="location.href = 'https://www-coolmathgames-com.translate.goog/?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=en-US&_x_tr_pto=op';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
-
+<button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >OtherGames</button>
 
 
 
