--- a/index.html
+++ b/index.html
@@ -311,8 +311,9 @@
 
 <button onclick="location.href = 'https://104.149.142.66/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
-<button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >OtherGames</button>
+<button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >Other Games</button>
 
+<button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 
 
 
