--- a/index.html
+++ b/index.html
@@ -315,6 +315,25 @@
 
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hyperlink Generator</title>
+	<style>
+		a:link,a:visited {
+			color: #2f2d2d;
+			text-decoration: underline;
+		}
+		a:hover {
+			color: #3415a2;
+			text-decoration: none;
+		}
+	</style>
+</head>
+<body>
+	<a href="https://coolmathgames.com">coolmathgames</a>
+</body>
+</html>
 
 
 
