--- a/index.html
+++ b/index.html
@@ -315,25 +315,7 @@
 
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Hyperlink Generator</title>
-	<style>
-		a:link,a:visited {
-			color: #2f2d2d;
-			text-decoration: underline;
-		}
-		a:hover {
-			color: #3415a2;
-			text-decoration: none;
-		}
-	</style>
-</head>
-<body>
-	<a href="https://coolmathgames.com">coolmathgames</a>
-</body>
-</html>
+<button onclick="location.href = 'https://104.149.142.66/__cpi.php?s=UkQ2YXlSaWJuc3ZoeGR2dG04WW9LaWFVSXErT2VRQXVwMDdXU3hsMVlDdW9CNmNHN1crMVZNc2s2b2g4VFhMTnEvTDVnejBkQWlibnNQYUxWaWdsUDNKTkx1V2ZHNFVNaEcvWVo3Tk1FSjQ9&r=aHR0cHM6Ly8xMDQuMTQ5LjE0Mi42Ni8%2FX19jcG89YUhSMGNITTZMeTkzZDNjdVkyOXZiRzFoZEdobllXMWxjeTVqYjIw&__cpo=1';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
 
 
 
