--- a/index.html
+++ b/index.html
@@ -311,11 +311,12 @@
 
 <button onclick="location.href = 'https://104.149.142.66/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
+<button onclick="location.href = 'https://104.149.142.66/__cpi.php?s=UkQ2YXlSaWJuc3ZoeGR2dG04WW9LaWFVSXErT2VRQXVwMDdXU3hsMVlDdW9CNmNHN1crMVZNc2s2b2g4VFhMTnEvTDVnejBkQWlibnNQYUxWaWdsUDNKTkx1V2ZHNFVNaEcvWVo3Tk1FSjQ9&r=aHR0cHM6Ly8xMDQuMTQ5LjE0Mi42Ni8%2FX19jcG89YUhSMGNITTZMeTkzZDNjdVkyOXZiRzFoZEdobllXMWxjeTVqYjIw&__cpo=1';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
+	
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >Other Games</button>
 
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 
-<button onclick="location.href = 'https://104.149.142.66/__cpi.php?s=UkQ2YXlSaWJuc3ZoeGR2dG04WW9LaWFVSXErT2VRQXVwMDdXU3hsMVlDdW9CNmNHN1crMVZNc2s2b2g4VFhMTnEvTDVnejBkQWlibnNQYUxWaWdsUDNKTkx1V2ZHNFVNaEcvWVo3Tk1FSjQ9&r=aHR0cHM6Ly8xMDQuMTQ5LjE0Mi42Ni8%2FX19jcG89YUhSMGNITTZMeTkzZDNjdVkyOXZiRzFoZEdobllXMWxjeTVqYjIw&__cpo=1';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
 
 
 
@@ -327,7 +328,7 @@
 		   <p class="aligncenter">
     <img src="mediamisc/download.gif" alt="hey bozo we´re under construction!!" />
 </p>
-		  <p> NOTICE: So, I've seen the original site has been blocked. And that's why I'm making backups rapidly, and I encourage you to do the same as long as you give credit. Expect a list of them all on a doc some time soon, thanks!</p>
+		  <p> Hey Like I Allways Say "It Wasnt Me" ¯\_(ツ)_/¯ </p>
 		  
 		  
 		  <a href="readme.md">Credits</a> -  <a href="miscgame/howtogba">How to play (GBA) games</a> 
