--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
 	
-    <p>Welcome to Chili Bowl G@mes! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g@mes. Along with providing new website makers embedable g@mes!</p>
-    <p>Everything <i>should</i> work. If something goes wrong please report an error at the <a href="https://github.com/CBGamesdev/chiliblox">Github.</a> Thanks and Enjoy!!</p>
+    <p>Welcome to NWG8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g@mes. Along with providing new website makers embedable g@mes!</p>
+    <p>Everything <i>should</i> work. If something goes wrong then to bad. >Github.</a> Thanks and Enjoy!!</p>
 	
 	<!-- Div align in the middle -->
       <div style="margin-left:auto;margin-right:auto;text-align:center">
@@ -64,7 +64,7 @@
     </p>
 
     <p>
-      Flash G@mes 
+      Flash G8mes 
     </p>
 <a href="alien.html">Alien Hominid</a>
  -
@@ -199,7 +199,7 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-       Other G@mes (Non Flash)
+       Other G8mes (Non Flash)
     </p>
 	  
 <a href="miscgame/1v1lol.html">1v1.lol</a>
@@ -256,7 +256,7 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-      Emul@ted
+      Emul8ted
     </p>
 <a href="example/batman.html">Batman (NES)</a>
 -
