--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div style="margin:0 auto;text-align:center">
 	
     <p>Welcome to NWG8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g@mes. Along with providing new website makers embedable g@mes!</p>
-    <p>Everything <i>should</i> work. If something goes wrong then to bad. >Github.</a> Thanks and Enjoy!!</p>
+    <p>Everything <i>should</i> work. If something goes wrong then to bad.</a> Thanks and Enjoy!!</p>
 	
 	<!-- Div align in the middle -->
       <div style="margin-left:auto;margin-right:auto;text-align:center">
