--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
     </p>
 
 
-<button onclick="location.href = 'https://104.149.142.66/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
-<button onclick="location.href = 'https://104.149.142.66/__cpi.php?s=UkQ2YXlSaWJuc3ZoeGR2dG04WW9LaWFVSXErT2VRQXVwMDdXU3hsMVlDdW9CNmNHN1crMVZNc2s2b2g4VFhMTnEvTDVnejBkQWlibnNQYUxWaWdsUDNKTkx1V2ZHNFVNaEcvWVo3Tk1FSjQ9&r=aHR0cHM6Ly8xMDQuMTQ5LjE0Mi42Ni8%2FX19jcG89YUhSMGNITTZMeTkzZDNjdVkyOXZiRzFoZEdobllXMWxjeTVqYjIw&__cpo=1';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
+<button onclick="location.href = 'https://104.149.142.66/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
 	
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >Other Games</button>
 
