--- a/index.html
+++ b/index.html
@@ -305,19 +305,21 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-
+	Other Links
     </p>
 
 
-<button onclick="location.href = 'https://azureserv.com/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://m-edit.coolmath-games.com/';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 
 <button onclick="location.href = 'https://104.149.144.234/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
+	
+<button onclick="location.href = 'https://www.learn.gq/';" id="myButton" class="float-left submit-button" >Website Unblocker</button>
 	
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >Other Games</button>
 
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 
-
+<button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
 
 
     <p>
