--- a/index.html
+++ b/index.html
@@ -2,44 +2,29 @@
 <!DOCTYPE html>
 
 <html>
-    <meta charset="UTF-8" />
-    <style>
-        * { box-sizing: border-box; }
-
-        .separate   { width: 100%; height: 10em; }
-        .separate>* { width: 100%; height: 100%; margin-top: 1em; }
-
-        .overlay   { width: 100%; height: 10em; filter: brightness(3); }
-        .overlay>* { width: 100%; height: 100%; position: absolute; }
-        .overlay>:nth-of-type(1) { opacity: 1; }
-        .overlay>:nth-of-type(2) { opacity: .5; }
-        .overlay>:nth-of-type(3) { opacity: .33; }
-        .overlay>:nth-of-type(4) { opacity: .25; }
-
-        .blue   { background: linear-gradient(
-           90deg,                 rgb(0,0,256)  0%, rgb(0,0,256) 5%,  rgb(0,0,0) 20% ); }
-        .green  { background: linear-gradient(
-           90deg, rgb(0,0,0) 0%,  rgb(0,256,0) 25%, rgb(0,256,0) 35%, rgb(0,0,0) 55% ); }
-        .red    { background: linear-gradient(
-           90deg, rgb(0,0,0) 15%, rgb(256,0,0) 35%, rgb(256,0,0) 45%, rgb(0,0,0) 100% ); }
-        .blue2  { background: linear-gradient(
-           90deg, rgb(0,0,0) 65%, rgb(0,0,256) 95%, rgb(0,0,256) 100% ); }
-    </style>
+<head>
+	<style type="text/css">
+		body {
+			background-color: red;
+			transition: background-color 7s;
+		}
+	</style>
 </head>
 <body>
-<h1>Rainbow</h1>
-    <div class="overlay">
-        <div class="blue"></div>
-        <div class="green"></div>
-        <div class="red"></div>
-        <div class="blue2"></div>
-    </div>
-    <div class="separate">
-        <div class="blue"></div>
-        <div class="green"></div>
-        <div class="red"></div>
-        <div class="blue2"></div>
-    </div>
+	<script type="text/javascript">
+		var colors = ["red", "orange", "yellow", "green", "blue", "indigo", "violet"];
+
+		var i = 1;
+
+		window.setInterval(function(){
+			document.body.style.backgroundColor = colors[i];
+			i++;
+			if (i === colors.length){
+				i=0;
+			}
+		}, 5000);
+	</script>
+</body>
 	<html>
 
 <head>
