--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -314,6 +314,8 @@
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
+	
+	<a href="index.html"> TURN OFF RAINBOW </a>
 
 
     <p>
