Update and rename index.html to Raibow_index.html

--- a/Raibow_index.html
+++ b/Raibow_index.html
@@ -1,6 +1,29 @@
 
 <!DOCTYPE html>
 
+<html>
+    <style>
+      body {
+        animation: rainbow 10s ease infinite;
+      }
+
+      @keyframes rainbow {
+        0% { background-color: #ff0000; } /* red */
+        10% { background-color: #ff7f00; } /* orange */
+        20% { background-color: #ffff00; } /* yellow */
+        30% { background-color: #00ff00; } /* green */
+        40% { background-color: #007fff; } /* blue-green */
+        50% { background-color: #0000ff; } /* blue */
+        60% { background-color: #8b00ff; } /* indigo */
+        70% { background-color: #ff00ff; } /* violet */
+        80% { background-color: #ffffff; } /* white */
+        90% { background-color: #808080; } /* gray */
+        100% { background-color: #000000; } /* black */
+      }
+    </style>
+  <body>
+</html>
+
 <head>
 	 <title>
    NWG8MES
@@ -289,7 +312,7 @@
 
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
 	
-	<a href="Rainbow_index.html"> ON RAINBOW </a>
+	<a href="index.html"> TURN OFF RAINBOW </a>
 
 
     <p>
