--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
 	
-	<a href="Rainbow_index.html"> TURN ON RAINBOW </a>
+	<a href="Rainbow_index"> TURN ON RAINBOW </a>
 
 
     <p>
