--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 
 <!DOCTYPE html>
 
-
+    <style>
+    </style>
+    <a target="_blank" href="img_bank.png">
+    <img src="img_bank.png" alt="Bank">
+    </a>
+    </body>
 
 <head>
 	 <title>
