--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
 <!DOCTYPE html>
 
-    <style>
-    </style>
-    <a target="_blank" href="img_bank.png">
-    <img src="img_bank.png" alt="Bank">
-    </a>
-    </body>
+<meta property=’og:title’ content='NWG8MES'/>
+<meta property=’og:image’ content='https://i.pinimg.com/280x280_RS/e6/a0/13/e6a01369a0295731eb709a6b349ea47d.jpg’/>
+<meta property=’og:description’ content='DESCRIPTION OF YOUR SITE'/>
+<meta property=’og:url’ content='G8MES.github.io'/>
+<meta property='og:image:width' content='280' />
+<meta property='og:image:height' content='280' />
 
 <head>
 	 <title>
