--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 
 <meta property=’og:title’ content='NWG8MES'/>
-<meta property=’og:image’ content='https://i.pinimg.com/280x280_RS/e6/a0/13/e6a01369a0295731eb709a6b349ea47d.jpg’/>
-<meta property=’og:description’ content='DESCRIPTION OF YOUR SITE'/>
-<meta property=’og:url’ content='G8MES.github.io'/>
-<meta property='og:image:width' content='280' />
-<meta property='og:image:height' content='280' />
+<meta property=’og:image’ content='https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Video-Game-Controller-Icon.svg/2048px-Video-Game-Controller-Icon.svg.png’/>
+<meta property=’og:description’ content='Free G8MES For All'/>
+<meta property=’og:url’ content='https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Video-Game-Controller-Icon.svg/2048px-Video-Game-Controller-Icon.svg.png'/>
+<meta property='og:image:width' content='2048' />
+<meta property='og:image:height' content='2048' />
 
 <head>
 	 <title>
