--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
 	
-    <p>Welcome to NWG8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g@mes. Along with providing new website makers embedable g@mes!</p>
+    <p>Welcome to NWG8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g8mes. Along with providing new website makers embedable g8mes!</p>
     <p>Everything <i>should</i> work. If something goes wrong then to bad.</a> Thanks and Enjoy!!</p>
 	
 	<!-- Div align in the middle -->
@@ -176,7 +176,8 @@
 	   <p>
        Other G8mes (Non Flash)
     </p>
-	  
+<a href ="html5-fruit-ninja/index.html">Fruit Ninja</a>
+-	  
 <a href="miscgame/1v1lol.html">1v1.lol</a>
 -
 <a href="2048/index.html">2048</a>
