--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta property=’og:title’ content='NWG8MES'/>
 <meta property=’og:image’ content='https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Video-Game-Controller-Icon.svg/2048px-Video-Game-Controller-Icon.svg.png’/>
 <meta property=’og:description’ content='Free G8MES For All'/>
-<meta property=’og:url’ content='https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Video-Game-Controller-Icon.svg/2048px-Video-Game-Controller-Icon.svg.png'/>
+<meta property=’og:url’ content='https://weruhgfderfg.github.io/G8MES.github.io/index'/>
 <meta property='og:image:width' content='2048' />
 <meta property='og:image:height' content='2048' />
 
