--- a/html5-fruit-ninja/index.html
+++ b/html5-fruit-ninja/index.html
@@ -26,7 +26,7 @@
 <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
 <script src="/follow.js" type="text/javascript"></script>
 </div>
-	<div>RJNWCSD，由<a href="http://rjnwcsd.github.io" target="_blank">YO</a>NWG8MES</div>
+	<div>RJNWCSD，由<a href="https://weruhgfderfg.github.io/G8MES.github.io/index" target="_blank">YO</a>NWG8MES</div>
 	<div id="browser"></div>
 </div>
 <script src="scripts/all.js"></script>
