--- a/index.html
+++ b/index.html
@@ -1,6 +1,57 @@
 
 <!DOCTYPE html>
 
+<!------------Sign up-------------------->
+
+<form action="action_page.php" style="border:1px solid #ccc">
+  <div class="container">
+    <h1>Sign Up</h1>
+    <p>Please fill in this form to create an account.</p>
+    <hr>
+
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
+    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+    <label>
+      <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+    </label>
+
+    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+    <div class="clearfix">
+      <button type="button" class="cancelbtn">Cancel</button>
+      <button type="submit" class="signupbtn">Sign Up</button>
+    </div>
+  </div>
+</form>
+
+<!-------------------------------->
+
+<!--------BAN---------->
+
+function is_user_banned($email_address){
+  return mysql_result(
+      mysql_query(
+        "SELECT COUNT ('user_id') FROM 'users' where 'email_address = $email_address and is_banned = 1"
+      )
+  )
+}
+
+function login($username, $email_address, $password){
+  if (is_user_banned(email_address) == true){
+      //show error message and deny access
+  }
+}
+
+<!---------------------------->
+
+
 <meta property=’og:title’ content='NWG8MES'/>
 <meta property=’og:image’ content='https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Video-Game-Controller-Icon.svg/2048px-Video-Game-Controller-Icon.svg.png’/>
 <meta property=’og:description’ content='Free G8MES For All'/>
