--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 </head>
 
   <body>
+					       
+<script src="js/script.js"></script>
+					       
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
 	
