--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
 					       
-<script src="js/script.js"></script>
+<script src="BAN.js"></script>
 					       
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
