--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </p>
 
 
-<button onclick="location.href = 'https://m-edit.coolmath-games.com/';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<a href="CoolMathGames.com">CoolMathGames</a>
 
 <button onclick="location.href = 'https://104.149.144.234/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
 	
