--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -192,7 +192,8 @@
 	   <p>
        Other G8mes (Non Flash)
     </p>
-	  
+<a href ="html5-fruit-ninja/index.html">Fruit Ninja</a>
+-
 <a href="miscgame/1v1lol.html">1v1.lol</a>
 -
 <a href="2048/index.html">2048</a>
