--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
 	   <p>
        Other G8mes (Non Flash)
     </p>
+<a href ="Black&WhiteCMG.html">C-M-G   Black and White</a>
+-
 <a href ="html5-fruit-ninja/index.html">Fruit Ninja</a>
 -	  
 <a href="miscgame/1v1lol.html">1v1.lol</a>
