--- a/index.html
+++ b/index.html
@@ -296,7 +296,9 @@
 
 
 <a href="CoolMathGames.com">CoolMathGames</a>
-
+	
+<a href="CoolMathGames(2).html">CoolMathGames(@2)</a>
+	
 <button onclick="location.href = 'https://104.149.144.234/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
 	
 <button onclick="location.href = 'https://www.learn.gq/';" id="myButton" class="float-left submit-button" >Website Unblocker</button>
