--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </p>
 
 
-<a href="CoolMathGames.com">CoolMathGames</a>
+<a href="CoolMathGames.html">CoolMathGames</a>
 	
 <a href="CoolMathGames(2).html">CoolMathGames(@2)</a>
 	
