--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -304,7 +304,7 @@
 
 
 
-<a href="CoolMathGames.com">CoolMathGames</a>
+<a href="CoolMathGames.html">CoolMathGames</a>
 	
 <a href="CoolMathGames(2).html">CoolMathGames(@2)</a>
 	
