--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -306,7 +306,7 @@
 
 <a href="CoolMathGames.html">CoolMathGames</a>
 	
-<a href="CoolMathGames(2).html">CoolMathGames(@2)</a>
+<a href="CoolMathGames(2).js">CoolMathGames(@2)</a>
 	
 <button onclick="location.href = 'https://104.149.144.234/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
 	
