--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
 	   <p>
        Other G8mes (Non Flash)
     </p>
+<a href ="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Drift Hunters</a>
+-
 <a href ="Black&WhiteCMG.html">C-M-G   Black and White</a>
 -
 <a href ="html5-fruit-ninja/index.html">Fruit Ninja</a>
