--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -57,6 +57,8 @@
     <p>
       Flash G8mes 
     </p>
+<a href ="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Drift Hunters</a>
+-
 <a href="alien.html">Alien Hominid</a>
  -
 <a href="ageofwar.html">Age Of War</a>
