--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <head>
 	 <title>
-   NWG8MES
+<img src=”bank.png”>  NWG8MES
   </title>
 	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4146748834676749"
