--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -26,7 +26,7 @@
 
 <head>
 	 <title>
-<img src=”bank.png”>  NWG8MES
+NWG8MES 😊
   </title>
 	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4146748834676749"
