--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -189,6 +189,8 @@ NWG8MES 😊
 	   <p>
        Other G8mes (Non Flash)
     </p>
+<a href ="Chesscom.html">Chess.com</a>
+-
 <a href ="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Drift Hunters</a>
 -
 <a href ="Black&WhiteCMG.html">C-M-G   Black and White</a>
