--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -189,7 +189,7 @@ NWG8MES 😊
 	   <p>
        Other G8mes (Non Flash)
     </p>
-<a href ="Chesscom.html">Chesscom.html</a>
+<a href ="Chess.com">,Chess.com</a>
 -
 <a href ="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Drift Hunters</a>
 -
