--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -189,7 +189,7 @@ NWG8MES 😊
 	   <p>
        Other G8mes (Non Flash)
     </p>
-<a href ="Chess.com">,Chess.com</a>
+<button onclick="location.href = 'Chess.com';" id="myButton" class="float-left submit-button" >Chess.com</button>
 -
 <a href ="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Drift Hunters</a>
 -
