--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@ NWG8MES 😊
 	Other Links
     </p>
 
-
+<button onclick="location.href = 'scratch.mit.edu';" id="myButton" class="float-left submit-button" >scratch.mit</button>
+-
 <button onclick="location.href = 'https://www.chess.com/home';" id="myButton" class="float-left submit-button" >Chess.com</button>
 -	
 <button onclick="location.href = 'https://104.149.144.234/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
