--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ NWG8MES 😊
 	Other Links
     </p>
 
-<button onclick="location.href = 'scratch.mit.edu';" id="myButton" class="float-left submit-button" >scratch.mit</button>
+<button onclick="location.href = 'https://scratch.mit.edu/';" id="myButton" class="float-left submit-button" >scratch.mit</button>
 -
 <button onclick="location.href = 'https://www.chess.com/home';" id="myButton" class="float-left submit-button" >Chess.com</button>
 -	
