--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -301,7 +301,7 @@ NWG8MES 😊
     </p>
 
 
-<button onclick="location.href = 'scratch.mit.edu';" id="myButton" class="float-left submit-button" >scratch.mit</button>
+<button onclick="location.href = 'https://scratch.mit.edu/';" id="myButton" class="float-left submit-button" >scratch.mit</button>
 -
 <button onclick="location.href = 'https://www.chess.com/home';" id="myButton" class="float-left submit-button" >Chess.com</button>
 -	
