--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ NWG8MES 😊
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    <img src="mediamisc/download.gif" alt="hey bozo we´re under construction!!" />
+    UPDATE LOG! Added scratch.mit.edu, Added Chess.com, Added fruit Ninja! drew
 </p>
 		  <p> Hey Like I Allways Say "It Wasnt Me" ¯\_(ツ)_/¯ </p>
 		  
