--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -324,7 +324,7 @@ NWG8MES 😊
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added scratch.mit.edu, Added Chess.com, Added fruit Ninja! drew
+    UPDATE LOG! Added scratch.mit.edu, Added Chess.com, Added fruit Ninja!
 </p>
 		  <p></p>
 		  
