--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ NWG8MES 😊
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added scratch.mit.edu, Added Chess.com, Added fruit Ninja! drew
+    UPDATE LOG! Added scratch.mit.edu, Added Chess.com, Added fruit Ninja!
 </p>
 		  <p></p>
 		  
