--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -35,7 +35,7 @@
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
 	
-    <p>Welcome to NWG8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g8mes. Along with providing new website makers embedable g@mes!</p>
+    <p>Welcome to NWG8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g8mes. Along with providing new website makers embedable g8mes!</p>
     <p>Everything <i>should</i> work. If something goes wrong then to bad.</a> Thanks and Enjoy!!</p>
 	
 	<!-- Div align in the middle -->
