--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-
-
-
+<!DOCTYPE html>
 
 <meta property=’og:title’ content='NWG8MES'/>
 <meta property=’og:image’ content='https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Video-Game-Controller-Icon.svg/2048px-Video-Game-Controller-Icon.svg.png’/>
