--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -23,7 +23,7 @@
 
 <head>
 	 <title>
-🎮 NWG8MES 🎮
+\/🎮 NWG8MES 🎮\/
   </title>
 	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4146748834676749"
