--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 -
 <a href="run3/index.html">Run 3</a>
 -
-
+<a href="slope/index.html">Slope</a>
 -
 <a href="miscgame/spacebar.html">Spacebar Smasher</a>
 -
