--- a/index.html
+++ b/index.html
@@ -292,9 +292,7 @@
 -
 <button onclick="location.href = 'https://www.chess.com/home';" id="myButton" class="float-left submit-button" >Chess.com</button>
 -	
-<button onclick="location.href = 'https://104.149.144.234/?__cpo=aHR0cHM6Ly93d3cuY29vbG1hdGhnYW1lcy5jb20';" id="myButton" class="float-left submit-button" >CoolMathGames (2)</button>
--	
-<button onclick="location.href = 'https://www.learn.gq/';" id="myButton" class="float-left submit-button" >Website Unblocker</button>
+<button onclick="location.href = 'CoolMathGames';" id="myButton" class="float-left submit-button" >CoolMathGames </button>
 -	
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >Other Games</button>
 -
