--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added scratch.mit.edu, Added Chess.com, Added fruit Ninja!
+    UPDATE LOG! Added CoolMathGames.com!
 </p>
 		  <p></p>
 		  
