--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 -
 <button onclick="location.href = 'https://www.chess.com/home';" id="myButton" class="float-left submit-button" >Chess.com</button>
 -	
-<button onclick="location.href = 'CoolMathGames.com';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://CoolMathGames.com';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 -
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >Other Games</button>
 -
