--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -305,13 +305,14 @@
 -
 <button onclick="location.href = 'https://www.chess.com/home';" id="myButton" class="float-left submit-button" >Chess.com</button>
 -	
-<button onclick="location.href = 'CoolMathGames.com';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
+<button onclick="location.href = 'https://CoolMathGames.com';" id="myButton" class="float-left submit-button" >CoolMathGames.com</button>
 -
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgame76/';" id="myButton" class="float-left submit-button" >Other Games</button>
 -
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 -
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
+	
 	
 	<a href="index"> TURN OFF RAINBOW </a>
 
