--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
 <button onclick="location.href = 'https://sites.google.com/site/unblockedgames66ez/';" id="myButton" class="float-left submit-button" >YAY More Games</button>
 -
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
+-
+<button onclick="location.href = 'https://https://clicktheredbutton.com/m/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>
 	
 	<a href="Rainbow_index"> TURN ON RAINBOW </a> 
 
