--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -313,7 +313,7 @@
 -
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
 -
-<button onclick="location.href = 'https://https://clicktheredbutton.com/m/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
+<button onclick="location.href = 'https://clicktheredbutton.com/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
 	
 	<a href="index"> TURN OFF RAINBOW </a>
 
@@ -324,7 +324,7 @@
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added CoolMathGames.com! 
+    UPDATE LOG! Added CoolMathGames.com and clicktheredbutton.com! 
 </p>
 		  <p></p>
 		  
