--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
 -
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
 -
-<button onclick="location.href = 'https://https://clicktheredbutton.com/m/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>
+<button onclick="location.href = 'https://clicktheredbutton.com/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
 	
-	<a href="Rainbow_index"> TURN ON RAINBOW </a> 
+	<a href="index"> TURN ON RAINBOW  </a>
 
 
     <p>
@@ -311,7 +311,7 @@
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added CoolMathGames.com!
+    UPDATE LOG! Added CoolMathGames.com and clicktheredbutton.com! 
 </p>
 		  <p></p>
 		  
