--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <meta property='og:image:width' content='2048' />
 <meta property='og:image:height' content='2048' />
 
+<style>
+p {
+  background-image: url('bank.png');
+}
+</style>
+
 <head>
 	 <title>
 \/🎮 NWG8MES 🎮\/
