--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ body {
 -
 <button onclick="location.href = 'https://clicktheredbutton.com/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
 	
-	<a href="index"> TURN ON RAINBOW  </a>
+	<a href="Rainbow_index.html"> TURN ON RAINBOW  </a>
 
 
     <p>
