--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -25,6 +25,12 @@
 	 <title>
 \/🎮 NWG8MES 🎮\/
   </title>
+
+<head>
+    <style>
+        selector { CSS property: value; }
+    </style>
+</head>
 	
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4146748834676749"
      crossorigin="anonymous"></script>
