--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ body {
       ----------------------------------------------------------------
     </p>
 	   <p>
-       Other G8mes (Non Flash)
+       Non Flash/Other G8MES
     </p>
 <a href ="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Drift Hunters</a>
 -
