--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -193,7 +193,7 @@
       ----------------------------------------------------------------
     </p>
 	   <p>
-       Other G8mes (Non Flash)
+       Non Flash/Other G8MES
     </p>
 <a href ="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Drift Hunters</a>
 -
