--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta property='og:image:width' content='2048' />
 <meta property='og:image:height' content='2048' />
 
+<style.css></style.css>
+
 <head>
     <style>
         selector { CSS property: value; }
