--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property='og:image:width' content='2048' />
 <meta property='og:image:height' content='2048' />
 
-<style.css></style.css>
+#<style.css></style.css>#
 
 <include main.scss>
 
