--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 
+<head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+<style>
+body {
+  font-family: "Audiowide", sans-serif;
+}
+</style>
+</head>
+
 <meta property=’og:title’ content='NWG8MES'/>
 <meta property=’og:image’ content='https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Video-Game-Controller-Icon.svg/2048px-Video-Game-Controller-Icon.svg.png’/>
 <meta property=’og:description’ content='Free G8MES For All'/>
