--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -1,6 +1,15 @@
 
 <!DOCTYPE html>
 
+<head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+<style>
+body {
+  font-family: "Audiowide", sans-serif;
+}
+</style>
+</head>
+
 <html>
     <style>
       body {
