--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -1,6 +1,8 @@
 
 <!DOCTYPE html>
 
+  <font size="-2">This is smaller text.</font>
+
 <head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 <style>
