--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-  <font size="-2">This is smaller text.</font>
+  <font size="-2"></font>
 
 <head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
