--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 
-   <font size="-2"></font>
+    <font>1</font>
 
 <head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
