--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -1,12 +1,28 @@
 
 <!DOCTYPE html>
 
+<head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
+<style>
+body {
+  font-family: "NWG8MES", sans-serif;
+  font-size: 30px;
+}
+</style>
+</head>
+<body>
+
+<h1 class="font-effect-fire">Sofia on Fire</h1>
+
+</body>
+
 
 <head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 <style>
 body {
   font-family: "Audiowide", sans-serif;
+  font-size: 10px;
 }
 </style>
 </head>
