--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -5,14 +5,14 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
 <style>
 body {
-  font-family: "NWG8MES", sans-serif;
+  font-family: "Sofia", sans-serif;
   font-size: 30px;
 }
 </style>
 </head>
 <body>
 
-<h1 class="font-effect-fire">Sofia on Fire</h1>
+<h1 class="font-effect-fire">NWG8MES</h1>
 
 </body>
 
