--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 
 
 <head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
+<style>
+body {
+  font-family: "Sofia", sans-serif;
+  font-size: 20px;
+}
+</style>
+</head>
+<body>
+
+<h1 class="font-effect-fire">NWG8MES</h1>
+
+</body>
+
+
+<head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 <style>
 body {
   font-family: "Audiowide", sans-serif;
-	<font>-2</font>
+  font-size: 13px;
 }
 </style>
 </head>
