--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -356,7 +356,7 @@ _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added CoolMathGames.com and clicktheredbutton.com!  
+    UPDATE LOG! New Look!
 </p>
 		  <p></p>
 		  
