--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added CoolMathGames.com and clicktheredbutton.com!  
+    UPDATE LOG! New Look!
 </p>
 		  <p></p>
 		  
