--- a/Rainbow_index.html
+++ b/Rainbow_index.html
@@ -346,6 +346,8 @@ body {
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
 -
 <button onclick="location.href = 'https://clicktheredbutton.com/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
+-
+<button onclick="location.href = 'http://www.spacegoo.com/wingsuit/#';" id="myButton" class="float-left submit-button" >Teach me to fly</button>
 	
 	<a href="index"> TURN OFF RAINBOW </a>
 
