--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ body {
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! New Look!
+    UPDATE LOG! Added "teach me to fly"
 </p>
 		  <p></p>
 		  
