--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ body {
 -
 <button onclick="location.href = 'https://www.mathplayground.com/';" id="myButton" class="float-left submit-button" >Math Playground</button>
 -
-<button onclick="location.href = 'clicktheredbutton.com/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
+<button onclick="location.href = 'https://clicktheredbutton.com/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
 -
 <button onclick="location.href = 'http://www.spacegoo.com/wingsuit/#';" id="myButton" class="float-left submit-button" >Teach me to fly</button>
 
