--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 </head>
 <body>
 
-<h1 class="font-effect-fire">NWG8MES</h1>
+<h1 class="font-effect-fire">GR8G8MES</h1>
 
 </body>
 
@@ -36,7 +36,7 @@ body {
 
 <head>
 	 <title>
-|🎮 NWG8MES 🎮|
+|🎮 GR8G8MES 🎮|
 		 
   </title>
 
@@ -55,7 +55,7 @@ body {
      <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
 	
-    <p>Welcome to NWG8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g8mes. Along with providing new website makers embedable g8mes!</p>
+    <p>Welcome to GR8G8MES! This is a web page dedicated to providing free, unbl0cked Flash, NES and HTML g8mes. Along with providing new website makers embedable g8mes!</p>
     <p>Everything <i>should</i> work. If something goes wrong then to bad.</a> Thanks and Enjoy!!</p>
 	
 	<!-- Div align in the middle -->
