--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@ body {
 <button onclick="location.href = 'https://clicktheredbutton.com/';" id="myButton" class="float-left submit-button" >ClickTheRedButton.com</button>	
 -
 <button onclick="location.href = 'http://www.spacegoo.com/wingsuit/#';" id="myButton" class="float-left submit-button" >Teach me to fly</button>
+	-
+	<button onclick="location.href = 'https://bongo.cat/';" id="myButton" class="float-left submit-button" >Bongo Cat</button>
 
 	<a href="Rainbow_index"> TURN ON RAINBOW </a>
 
@@ -346,7 +348,7 @@ body {
 	  <footer> 
 		  
 		   <p class="aligncenter">
-    UPDATE LOG! Added "teach me to fly"
+    UPDATE LOG! Added "Bongo Cat"
 </p>
 		  <p></p>
 		  
